I made the bottom bar, fixed the horizontal scroll-bar

--- a/sprc.css
+++ b/sprc.css
@@ -148,15 +148,15 @@ a:link {
 
 .fa {
     font-size: 300%;
-    width: 27%;
+    width: 40%;
     height: 100%;
     text-align: center;
     text-decoration: none;
     padding-top: 2%;
     border: 2px solid white;
     border-radius: 10px;
+    float: left;
 }
-
 .fa:hover {
     opacity: 0.7;
     color: white;
@@ -165,24 +165,25 @@ a:link {
 .fa-facebook {
     background: #3B5998;
     color: white;
+    width: 25%;
 }
 
 .fa-twitter {
     background: rgb(92, 195, 255);
     color: white;
+    width: 25%;
 }
 
 .fa-instagram {
     background: #3B5998;
     color: white;
+    width: 25%;
 }
-
-.fa-linkedin {
-    background: rgb(96, 115, 155);
-    color: white;
-}
-
 .fa-youtube {
     background: red;
     color: white;
+    width: 25%;
+}
+.margleft{
+    margin-left: 5%;
 }
